// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Box bg prop sets background color 1`] = `
.c0 {
  box-sizing: border-box;
  position: relative;
  background-color: #66bb6a;
}

<div
  className="c0"
/>
`;

exports[`Box color prop sets color 1`] = `
.c0 {
  box-sizing: border-box;
  position: relative;
  color: #0091ea;
}

<div
  className="c0"
  color="#0091ea"
/>
`;

exports[`Box m prop sets margin 1`] = `
.c0 {
  box-sizing: border-box;
  position: relative;
  margin: 8px;
}

<div
  className="c0"
/>
`;

exports[`Box p prop sets padding 1`] = `
.c0 {
  box-sizing: border-box;
  position: relative;
  padding: 8px;
}

<div
  className="c0"
/>
`;

exports[`Box renders 1`] = `
.c0 {
  box-sizing: border-box;
  position: relative;
}

<div
  className="c0"
/>
`;

exports[`Box width prop sets width 1`] = `
.c0 {
  box-sizing: border-box;
  position: relative;
  width: 50%;
}

<div
  className="c0"
  width={0.5}
/>
`;
